Fixed Alignment

--- a/html/style.css
+++ b/html/style.css
@@ -11,32 +11,31 @@ body {
     width: 100%;
 }
 #speed {
-    position: absolute;
+    /*position: absolute;*/
     font-family: "Digital";
     font-weight: bolder;
     font-size: 30px;
-    margin-top: 9.4%;
-    margin-left: 9.9%;
     color: #282828;
+	position: fixed;
+	left: 81.5%;
+    top: 74%;
 }
 
 #range {
-    position: absolute;
     font-family: "Digital";
     font-weight: bolder;
     font-size: 30px;
-    margin-top: 9.4%;
-    margin-left: 16%;
+	position: fixed;
+    left: 90%;
+    top: 74%;
     color: #282828;
 }
-
-
-
 #lasergun {
     display: none;
     height: 490px;
     width: 600px;
-    margin-left: 70%;
-    margin-top: 38%;
+	position: fixed;
+    bottom: 0;
+    right: 0;
     background: url("Radargun.png");
 }
